Actually fixed the scrollbar this time

--- a/resources/assets/sass/partials/_documentation.scss
+++ b/resources/assets/sass/partials/_documentation.scss
@@ -96,7 +96,6 @@
 
 #sidebar {
   position: fixed;
-  overflow-y: scroll;
 
 .side-menu {
   overflow: hidden;
